--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <base href="%BASE_URL%" />
-      <link rel="icon" type="image/x-icon" href="/vite.svg">
+      <link rel="icon" type="image/x-icon" href="https://i.redd.it/dlzsqz1uubib1.jpg">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700;900&display=swap" rel="stylesheet">
